--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Jason Young
+language: zh-CN  # 指定语言，会影响主题显示的语言，按需修改
 timezone: ''
 
 # URL
@@ -96,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: fluid  # 指定主题 https://github.com/fluid-dev/
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
