--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,14 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 10  # 博客-首页 显示的文章数
   order_by: -date
+
+archive_generator:
+  per_page: 50  # 博客-归档 显示的文章数
+  yearly: false
+  monthly: false
+  daily: false
 
 # Category & Tag
 default_category: uncategorized
