--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: Jason Young
+author: Atticus Young
 language: zh-CN  # 指定语言，会影响主题显示的语言，按需修改
 timezone: ''
 theme: fluid  # 指定主题 https://github.com/fluid-dev/
